assets/styles.css
header {
  background-color: goldenrod;
  text-align: center;
  height: auto;
  padding: 20px;
  margin: 0 auto;
}

body {
  background-color: goldenrod;
  margin: 0 auto;
  font-family: 'Azeret Mono', monospace;
  color: black;
}

nav a {
  background: black;
  font-size: 20px;
  text-decoration: none;
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
  padding: 20px 0;
  margin: 0 5px;
}

nav a:hover {
  border-top: 2px solid lightsteelblue;
  border-bottom: 2px solid lightsteelblue;
  padding: 6px 0;
}

.who {
  border: solid 1px black;
  text-align: center;
  background-color: goldenrod;
  padding-bottom: 30px;
}

.news {
  background-color: gray;
  margin: 0px 2px 4px 4px;
  text-align: center;
  height: auto;
  border: solid 1px black;
  padding: 2px 2px;
}

.blockquote {
  background-color: gray;
  margin-right:4px;
  font-size: 1rem;
  text-align: center;
  height: auto;
  border: solid 1px black;
  padding: 2px 2px;
}

.card {
  margin: 6px 10px 6px 40px;
  background-color: gainsboro;
  border: solid 1px black;
  width: 420px;
  display: inline-block;
  padding: 10px;
}
.subscribe {
  margin-left:100px;
  margin-right: 2px;
  padding: 10px 10px;
}
form {
  margin-left: 10px;
}
button {
  background-color:black;
  color: white;
  border: solid 1px orangered;
  margin: 2px 2px;
  padding: 1px 1px;
  width: 100px;
  height: 50px;
  border-radius: 25px;
}

footer {
  height: 100px;
  background-color: gray;
  border: solid 1px black;
}

.social-networks {
  text-align: center;
}

.social-networks li {
  display: inline;
  color: black;
}

.social-networks i {
  font-size: 180%;
  margin: 1%;
  padding: 16px 10px;
  color: black;
}

.social-networks a:hover {
  border-top: 2px solid white;
  border-bottom: 2px solid white;
  color: antiquewhite;
  padding: 6px 0;
}

